--- a/style.css
+++ b/style.css
@@ -66,10 +66,67 @@ footer {
   list-style: none;
   margin: 0;
   padding: 0;
+  display: flex;
+}
+.flex-nav ul li {
+  flex: 3;
+}
+.flex-nav ul li.social {
+  flex: 1;
 }
 
 @media all and (max-width: 1000px) {
+  .flex-nav ul {
+    flex-wrap: wrap;
+  }
+  .flex-nav ul li {
+    flex: 1 1 50%;
+  }
+  .flex-nav ul li.social {
+    flex-basis: 100%;
+  }
 }
 
 @media all and (max-width: 500px) {
+  .flex-nav ul li {
+    flex-basis: 100%;
+  }
+
+  /* Flex container */
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+
+  /* Flex Item */
+  .wrapper > * {
+    order: 999;
+  }
+
+  .flex-nav {
+    order: 1;
+  }
+
+  .toggleNav {
+    display: block;
+  }
+
+  .flex-nav ul {
+    display: none;
+  }
+  .flex-nav ul.open {
+    display: flex;
+  }
+
+  .top {
+    order: 2;
+  }
+
+  .details {
+    order: 3;
+  }
+
+  .signup {
+    order: 4;
+  }
 }
